recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:8: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:9: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:11: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:12: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:19: error: type mismatch;
 found   : Boolean
 required: Int
  for(i <-0 to i < 3)
                 ^